# DocMasterAI

./: .gitignore  LICENSE  README.md  TODO.md  package-lock.json  package.json  package.nls.json  package.nls.ko.json  tsconfig.json  webpack.config.js
docmaster-backend/: index.py  main.py  pyproject.toml  requirements.txt  vercel.json
docmaster-backend/api/: index.py
docmaster-backend/app/: extract_constants.py  md_refine.py  normalizer.py  pdf_utils.py  pptx_utils.py
docmaster-backend/outputs/: (퍼즐팩) Phase1_v0.2_260105_20260224_155122_a8fbdfb8.md  (퍼즐팩) Phase1_v0.4_260119 1_20260224_150822_85c499cd.md  (퍼즐팩) Phase1_선택관광 추가하기_v0.1_251201_20260224_151435_2b554c73.md  H-AI_Package_AgentMode_Mockups_v2_20260224_161331_0c15e6d0.md  [2차]이미지일정표 자동화  _템플릿 UI_V.0.1_250516_20260227_101455_3b9561b4.md  test_docmaster_20260224_101336_ef2b4f8e.md  내맘대로개선_v0.1_20260224_143507_69c0f3c7.md  패키지 쿠폰 대리점 수수료 분담 개선v0.5_20260227_103313_497c1124.md  허브_정산_통합대체관리_메뉴신설_260209_v0.02_20260224_161354_d2206df6.md  허브_정산_통합대체관리_메뉴신설_260209_v0.02_20260224_170544_3c0fc533.md
docmaster-web/: index.html  package-lock.json  package.json  vercel.json  vite.config.ts
docmaster-web/src/: App.tsx
docs/: 01-service-concept-and-flow-en.md  01-service-concept-and-flow-ko.md  02-infrastructure-and-tech-spec-en.md  02-infrastructure-and-tech-spec-ko.md  03-source-code-analysis-en.md  03-source-code-analysis-ko.md  README.md
src/: extension.ts
src/api/: llamaParse.ts  llmClient.ts
src/utils/: templateManager.ts  uiConfig.ts
src/webview/: chatViewProvider.ts  reportPanel.ts
(+9 files in other folders)
