[project]
name = "docmaster-backend"
version = "1.1.0"
description = "DocMaster AI - PDF/PPTX parsing API"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pymupdf4llm>=0.2.0",
    "pdfplumber>=0.11.0",
    "python-pptx>=0.6.0",
    "python-multipart",
]

[project.scripts]
# Vercel FastAPI 진입점: main:app
app = "main:app"

[tool.vercel]
excludeFiles = ["venv/**", "outputs/**", "**/__pycache__/**", "**/*.pyc"]
